Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -15,3 +15,4 @@ Temporary commit content 219
 Temporary commit content 224
 Temporary commit content 233
 Temporary commit content 235
+Temporary commit content 253
