Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ Temporary commit content 18
 Temporary commit content 22
 Temporary commit content 23
 Temporary commit content 29
+Temporary commit content 42
