Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@ Temporary commit content 267
 Temporary commit content 268
 Temporary commit content 275
 Temporary commit content 280
+Temporary commit content 287
