Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -13,3 +13,4 @@ Temporary commit content 193
 Temporary commit content 210
 Temporary commit content 219
 Temporary commit content 224
+Temporary commit content 233
