Optimized database queries

--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@ Temporary commit content 43
 Temporary commit content 98
 Temporary commit content 125
 Temporary commit content 140
+Temporary commit content 184
