Added initial project plan

--- a/index.html
+++ b/index.html
@@ -19,3 +19,4 @@ Temporary commit content 253
 Temporary commit content 267
 Temporary commit content 268
 Temporary commit content 275
+Temporary commit content 280
