Updated README with new features

--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@ Temporary commit content 125
 Temporary commit content 140
 Temporary commit content 184
 Temporary commit content 193
+Temporary commit content 210
