Enhanced UI responsiveness

--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@ Temporary commit content 233
 Temporary commit content 235
 Temporary commit content 253
 Temporary commit content 267
+Temporary commit content 268
