Added initial project plan

--- a/index.html
+++ b/index.html
@@ -18,3 +18,4 @@ Temporary commit content 235
 Temporary commit content 253
 Temporary commit content 267
 Temporary commit content 268
+Temporary commit content 275
