Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@ Temporary commit content 210
 Temporary commit content 219
 Temporary commit content 224
 Temporary commit content 233
+Temporary commit content 235
