Fixed bug in data processing script

--- a/index.html
+++ b/index.html
@@ -12,3 +12,4 @@ Temporary commit content 184
 Temporary commit content 193
 Temporary commit content 210
 Temporary commit content 219
+Temporary commit content 224
