Fixed typos in documentation

--- a/index.html
+++ b/index.html
@@ -16,3 +16,4 @@ Temporary commit content 224
 Temporary commit content 233
 Temporary commit content 235
 Temporary commit content 253
+Temporary commit content 267
